// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bridge > Bridge to ETH > BridgeIntent 1`] = `
{
  "dest": "01",
  "destAddress": "2222222222222222222222222222222222222222",
  "destAmount": "f9ccd8a1c5080000",
  "destToken": "3333333333333333333333333333333333333333",
  "nonce": "d5eeff33-d5bc-4aca-9ecb-3406c02a5dc4",
  "src": "dd381fbb392c85160d8b0453e446757b12384046",
  "srcAddress": "1111111111111111111111111111111111111111",
  "srcAmount": "f9ccd8a1c5080000",
  "srcToken": "dd381fbb392c85160d8b0453e446757b12384046",
}
`;

exports[`Bridge > Bridge to ETH > BridgeObservation 1`] = `
{
  "dest": "01",
  "destAddress": "2222222222222222222222222222222222222222",
  "destAmount": "f9ccd8a1c5080000",
  "destConfirmation": "4444444444444444444444444444444444444444444444444444444444444444",
  "destToken": "3333333333333333333333333333333333333333",
  "src": "dd381fbb392c85160d8b0453e446757b12384046",
  "srcAddress": "1111111111111111111111111111111111111111",
  "srcAmount": "f9ccd8a1c5080000",
  "srcToken": "dd381fbb392c85160d8b0453e446757b12384046",
}
`;
